--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pictures",
   "version": "0.1.0",
   "private": true,
+  "test": "jest",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,6 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "jest": "^27.4.6",
+    "@types/jest": "^27.0.3"
   }
 }
